implement about responsive design

--- a/about.html
+++ b/about.html
@@ -53,6 +53,9 @@
                 vel augue lacinia, tincidunt nibh in, ultrices purus. Nunc et dapibus neque. In hac habitasse platea
                 dictumst. Integer sed lobortis risus.</p>
         </div>
+        <div class="image1"></div>
+        <div class="image2"></div>
+        <div class="image3"></div>
     </section>
     <footer>
         <div id="social-footer">
