fix all nav links

--- a/testimonials.html
+++ b/testimonials.html
@@ -19,7 +19,7 @@
                     <a href="index.html" alt="home">
                         <li>Home</li>
                     </a>
-                    <a href="404.html" alt="About us">
+                    <a href="about.html" alt="About us">
                         <li>About Us</li>
                     </a>
                     <a href="testimonials.html" alt="Testimonials from our clients and partners">
