--- a/about.html
+++ b/about.html
@@ -20,10 +20,10 @@
                         <li>Home</li>
                     </a>
                     <a href="about.html" alt="About us">
-                        <li>About Us</li>
+                        <li id="current">About Us</li>
                     </a>
                     <a href="testimonials.html" alt="Testimonials from our clients and partners">
-                        <li id="current">Testimonials</li>
+                        <li>Testimonials</li>
                     </a>
                     <a href="faq.html" alt="FAQ">
                         <li>FAQ</li>
