--- a/faq.html
+++ b/faq.html
@@ -19,14 +19,14 @@
                     <a href="index.html" alt="home">
                         <li>Home</li>
                     </a>
-                    <a href="404.html" alt="About us">
+                    <a href="about.html" alt="About us">
                         <li>About Us</li>
                     </a>
                     <a href="testimonials.html" alt="Testimonials from our clients and partners">
-                        <li id="current">Testimonials</li>
+                        <li>Testimonials</li>
                     </a>
                     <a href="faq.html" alt="FAQ">
-                        <li>FAQ</li>
+                        <li id="current">FAQ</li>
                     </a>
                     <a href="#social-footer" alt="Social media contacts">
                         <li>Social</li>
