--- a/faq.html
+++ b/faq.html
@@ -31,7 +31,7 @@
                     <a href="#social-footer" alt="Social media contacts">
                         <li>Social</li>
                     </a>
-                    <a href="mailto:ronin347media@gmail.com" alt="contact us by email">
+                    <a href="contact.html" alt="contact us by email">
                         <li>Contact</li>
                     </a>
                 </ul>
@@ -93,7 +93,7 @@
                                 class="fa-brands fa-youtube"></i></a>
                     </li>
                     <li>
-                        <a id="instagram" href="https://instagram.com" target="_blank" rel="noopener"
+                        <a id="instagram" href="https://www.instagram.com/ronin347media/" target="_blank" rel="noopener"
                             aria-label="Visit our Instagram (opens in a new tab)"><i
                                 class="fa-brands fa-instagram"></i></a>
                     </li>
