check and adjust contact page to be responsive to alternative devices

--- a/contact.html
+++ b/contact.html
@@ -32,13 +32,10 @@
     </div></header>
     <section class="contact-form">
         <form method="POST" action="https://formdump.codeinstitute.net/" class="signup-form">
-            <label for="first-name">First Name</label>
-            <input class="text" id="first-name" name="first_name" type="text" required>
+            <label for="name">Name:</label>
+            <input class="text" id="name" name="first_name" type="text" required>
             
-            <label for="last-name">Last Name</label>
-            <input class="text" id="last-name" name="last_name" type="text" required>
-            
-            <label for="email">Email Address</label>
+            <label for="email">Email Address:</label>
             <input class="text" type="email" id="email" name="email_address" required>
 
             <label for="note">Got a note for us?</label>
