resolve bug: hero link on mobile devices, attempt 1

--- a/contact.html
+++ b/contact.html
@@ -15,7 +15,7 @@
             <button class="nav-menu"><span id="big-nav">Menu</span><i class="fa-solid fa-bars"></i></button>
                 <div class="panel">
                     <ul>
-                        <a href="index.html" alt="home"><li id="current">Home</li></a>
+                        <a href="index.html" alt="home"><li>Home</li></a>
                         <a href="404.html" alt="About us"><li>About Us</li></a>
                         <a href="testimonials.html" alt="Testimonials from our clients and partners"><li>Testimonials</li></a>
                         <a href="404.html" alt="FAQ"><li>FAQ</li></a>
