--- a/index.html
+++ b/index.html
@@ -47,13 +47,12 @@
                 <img src="assets/images/index/ronin-logo-clip.png" alt="Ronin347 Logo">
             </div>
         </div>
-
         <header class="hero">
             <div id="hero-project">
                 <video autoplay muted loop>
                     <source src="assets/videos/ronin-hero-vid.mov" type="video/mp4">
                 </video>
-                <a href="404.html">Watch our Portfolio</a>
+                <div class="hero-link"><a href="index2.html">Watch our Portfolio</a></div>
                 <div class="ink-partition ip-bottom-hero"></div>
             </div>
             <div class="ink-partition ip-top-cta"></div>
