--- a/404.html
+++ b/404.html
@@ -5,6 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link href="assets/css/style-404.css" rel="stylesheet" type="text/css" />
+    <link rel="icon" type="image/x-icon" href="assets/images/site-wide/favicon.ico">
     <title>Document</title>
 </head>
 <body>
