--- a/faq.html
+++ b/faq.html
@@ -6,6 +6,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link href="assets/css/style-faq.css" rel="stylesheet" type="text/css" />
+    <link rel="icon" type="image/x-icon" href="assets/images/site-wide/favicon.ico">
     <title>Ronin 347 Projects</title>
 </head>
 
