--- a/index.html
+++ b/index.html
@@ -6,14 +6,17 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link href="assets/css/style-index.css" rel="stylesheet" type="text/css" />
+    <link rel="icon" type="image/x-icon" href="assets/images/site-wide/favicon.ico">
     <title>Ronin 347</title>
 </head>
 
 <body>
+    <!-- Background Image-->
     <div class="bg">
         <div class="bg-overlay"></div>
-
     </div>
+
+    <!-- Navigation -->
     <div class="index-layout">
         <nav>
             <div>
@@ -42,6 +45,8 @@
                 </div>
             </div>
         </nav>
+
+        <!-- Logo/header and Hero Video -->
         <div id="logo-positioner">
             <div class="logo" id="logo-container">
                 <img src="assets/images/index/ronin-logo-clip.png" alt="Ronin347 Logo">
@@ -58,8 +63,9 @@
             <div class="ink-partition ip-top-cta"></div>
         </header>
 
-        <!-- blurb -->
+        <!-- Main body text -->
         <section class="call-to-action">
+            <!-- Logo for small resolution devices-->
             <div id="mobile-logo">
                 <img src="assets/images/index/ronin-logo-clip.png" alt="Ronin347 Logo">
             </div>
@@ -81,7 +87,7 @@
                     can do for you.
                 </p>
                 <h2 class="contact-head">Drop us an email</h2>
-                <p class="contact-mail">@ <a href="mailto:ronin347media@gmail.com"
+                <p class="contact-mail">@ <a href="contact.html"
                         alt="contact us by email">ronin347media@gmail.com</a></p>
             </div>
         </section>
@@ -89,7 +95,6 @@
 
     <!-- footer -->
     <footer>
-
         <div class="footer" id="social-footer">
             <div class="ink-partition ip-bottom-cta"></div>
             <div id="social">
@@ -97,7 +102,7 @@
                 <ul class="social-buttons">
                     <li>
                         <a id="twitter" href="https://twitter.com" target="_blank" rel="noopener"
-                            aria-label="Visit our facebook page (opens in a new tab)"><i
+                            aria-label="Visit our twitter page (opens in a new tab)"><i
                                 class="fa-brands fa-twitter-square"></i></a>
                     </li>
                     <li>
