add commenting and structure to html

--- a/404.html
+++ b/404.html
@@ -8,6 +8,7 @@
     <link rel="icon" type="image/x-icon" href="assets/images/site-wide/favicon.ico">
     <title>Document</title>
 </head>
+<!-- click the played card to go back ot the index page-->
 <body>
     <div class="container">
         <h1>Error: 404</h1>
