--- a/about.html
+++ b/about.html
@@ -11,7 +11,10 @@
 </head>
 
 <body>
+    <!-- background image -->
     <div class="bg"></div>
+
+    <!-- navigation button -->
     <nav>
         <div>
             <button class="nav-menu"><span id="big-nav">Menu</span><i class="fa-solid fa-bars"></i></button>
@@ -39,6 +42,8 @@
             </div>
         </div>
     </nav>
+
+    <!-- page name and logo -->
     <header>
         <div class="logo">
         </div>
@@ -46,6 +51,8 @@
             <h1>Our Story</h1>
         </div>
     </header>
+
+    <!-- main body text -->
     <section class="about-container">
         <div class="about">
             <h2>Lorem Ipsum</h2>
@@ -54,10 +61,13 @@
                 vel augue lacinia, tincidunt nibh in, ultrices purus. Nunc et dapibus neque. In hac habitasse platea
                 dictumst. Integer sed lobortis risus.</p>
         </div>
+        <!-- page imagery -->
         <div class="image1"></div>
         <div class="image2"></div>
         <div class="image3"></div>
     </section>
+
+    <!-- footer with social media buttons-->
     <footer>
         <div id="social-footer">
             <div class="ink-partition ip-bottom-cta"></div>
@@ -81,6 +91,8 @@
                     </li>
                 </ul>
             </div>
+
+            <!-- link to my github and copyright information -->
             <div class="footer-creds">
                 <div class="creds-1" id="cal-rex-git">
                     <p>Site Developed for Ronin347 by <a href="https://github.com/Cal-Rex"
@@ -93,7 +105,13 @@
         </div>
     </footer>
 </body>
+
+<!-- script for social media icons -->
+<!-- script created by fontawesome.com-->
 <script src="https://kit.fontawesome.com/85f184e105.js" crossorigin="anonymous"></script>
+
+<!-- script for navigation button -->
+<!-- script created by w3C Schools -->
 <script>
     var acc = document.getElementsByClassName("nav-menu");
     var i;
