--- a/blank-page.html
+++ b/blank-page.html
@@ -11,8 +11,12 @@
 </head>
 
 <body>
+
+    <!-- background image -->
     <div class="bg"></div>
         <div class="bg-overlay"></div>
+
+        
         <nav><div>
             <button class="nav-menu"><span id="big-nav">Menu</span><i class="fa-solid fa-bars"></i></button>
                 <div class="panel">
@@ -62,7 +66,13 @@
         </div>
     </footer>
 </body>
+
+<!-- script for social media icons -->
+<!-- script created by fontawesome.com-->
 <script src="https://kit.fontawesome.com/85f184e105.js" crossorigin="anonymous"></script>
+
+<!-- script for navigation button -->
+<!-- script created by w3C Schools -->
 <script>
     var acc = document.getElementsByClassName("nav-menu");
     var i;
