--- a/index.html
+++ b/index.html
@@ -117,6 +117,7 @@
                     </li>
                 </ul>
             </div>
+            <!-- link to my github and copyright information -->
             <div class="footer-creds">
                 <div class="creds-1" id="cal-rex-git">
                     <p>Site Developed for Ronin347 by <a href="https://github.com/Cal-Rex"
@@ -129,7 +130,13 @@
         </div>
     </footer>
 </body>
+
+<!-- script for social media icons -->
+<!-- script created by fontawesome.com-->
 <script src="https://kit.fontawesome.com/85f184e105.js" crossorigin="anonymous"></script>
+
+<!-- script for navigation button -->
+<!-- script created by w3C Schools -->
 <script>
     var acc = document.getElementsByClassName("nav-menu");
     var i;
