--- a/testimonials.html
+++ b/testimonials.html
@@ -11,7 +11,10 @@
 </head>
 
 <body>
+    <!-- background image -->
     <div class="bg"></div>
+
+    <!-- Navigation button -->
     <nav>
         <div>
             <button class="nav-menu"><span id="big-nav">Menu</span><i class="fa-solid fa-bars"></i></button>
@@ -39,6 +42,8 @@
             </div>
         </div>
     </nav>
+
+    <!-- page header/title and logo -->
         <header>
             <div class="logo">
             </div>
@@ -46,6 +51,8 @@
                 <h1 class="title">Testimonials</h1>
             </div>
         </header>
+
+        <!-- page body, contains all testimonials-->
         <div class="project-container" id="fly">
             <iframe src="https://www.youtube.com/embed/sUZLStS4j_c" title="The Fly Project - Onbaording video" allowfullscreen></iframe>
             <div class="testimonial-text"><h2>Fly Functional Fitness</h2>
@@ -80,8 +87,8 @@
                                       mauris tempor eget. Cras ornare semper egestas. Donec consectetur hendrerit nibh.</p></div>
           </div>
           <div class="project-container" id="adam">
-            <iframe src="https://www.youtube.com/embed/pbS2GWaIXCc" title="Adam?" allowfullscreen><!--- get a proper title ---></iframe>
-            <div class="testimonial-text"><h2><em>"Adam whos a pro Rugby player"</em></h2>
+            <iframe src="https://www.youtube.com/embed/pbS2GWaIXCc" title="Adam Ashe: Professional Rugby Player" allowfullscreen></iframe>
+            <div class="testimonial-text"><h2><em>"Adam Ashe: Professional Rugby Player"</em></h2>
                                   <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Fusce elementum volutpat orci a
                                       vehicula. Maecenas rutrum ligula ut risus fringilla fringilla. Nunc varius velit a nibh
                                       convallis euismod. Nulla vel augue lacinia, tincidunt nibh in, ultrices purus. Nunc et
@@ -112,6 +119,8 @@
                                       ipsum dolor sit amet, consectetur adipiscing elit. Quisque posuere congue diam, eu vehicula
                                       mauris tempor eget. Cras ornare semper egestas. Donec consectetur hendrerit nibh.</p></div>
           </div>
+
+          <!-- footer and social media buttons -->
           <footer>
             <div id="social-footer">
                 <div class="ink-partition ip-bottom-cta"></div>
@@ -135,6 +144,7 @@
                         </li>
                     </ul>
                 </div>
+                <!-- link to my github and copyright information -->
                 <div class="footer-creds">
                     <div class="creds-1" id="cal-rex-git">
                         <p>Site Developed for Ronin347 by <a href="https://github.com/Cal-Rex" aria-label="link to Cal-Rex's Github" target="_blank" rel="noopener">Cal-Rex</a></p>
@@ -146,7 +156,13 @@
             </div>
         </footer>
 </body>
+
+<!-- script for social media icons -->
+<!-- script created by fontawesome.com-->
 <script src="https://kit.fontawesome.com/85f184e105.js" crossorigin="anonymous"></script>
+
+<!-- script for navigation button -->
+<!-- script created by w3C Schools -->
 <script>
     var acc = document.getElementsByClassName("nav-menu");
     var i;
