--- a/index.html
+++ b/index.html
@@ -87,8 +87,8 @@
                     can do for you.
                 </p>
                 <h2 class="contact-head">Drop us an email</h2>
-                <p class="contact-mail">@ <a href="contact.html"
-                        alt="contact us by email">ronin347media@gmail.com</a></p>
+                <p class="contact-mail">@ <a href="contact.html" alt="contact us by email">ronin347media@gmail.com</a>
+                </p>
             </div>
         </section>
     </div>
