--- a/404.html
+++ b/404.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -9,13 +10,24 @@
     <title>Document</title>
 </head>
 <!-- click the played card to go back ot the index page-->
+
 <body>
     <div class="container">
         <h1>Error: 404</h1>
-        <div class="text-1"><h2 id="oh-dear">Oh dear,</h2><h2 id="no-u">You aren't supposed to be here.</h2></div>
-        <div class="pot-img"><a href="index.html" aria-label="return to the homepage"><img src="assets/images/404/pot-of-greed.png" alt="pot of greed! click to return to the hoempage"></a></div>
-        <div class="text-2"><h2 id="good-thing">Good thing you drew this pot of greed</h2><h2 id="direction">play it to return to the homepage</h2></div>
+        <div class="text-1">
+            <h2 id="oh-dear">Oh dear,</h2>
+            <h2 id="no-u">You aren't supposed to be here.</h2>
+        </div>
+        <div class="pot-img"><a href="index.html" aria-label="return to the homepage"><img
+                    src="assets/images/404/pot-of-greed.png" alt="pot of greed! click to return to the hoempage"></a>
+        </div>
+        <div class="text-2">
+            <h2 id="good-thing">Good thing you drew this pot of greed</h2>
+            <h2 id="direction">play it to return to the homepage</h2>
+        </div>
     </div>
-<p class="acknowledgements"><span>art created by <a href="https://www.deviantart.com/alanmac95" alt="visit the artist that drew this awesome pot of greed">AlanMac95</a></span></p>
+    <p class="acknowledgements"><span>art created by <a href="https://www.deviantart.com/alanmac95"
+                alt="visit the artist that drew this awesome pot of greed">AlanMac95</a></span></p>
 </body>
+
 </html>
