--- a/testimonials.html
+++ b/testimonials.html
@@ -44,117 +44,135 @@
     </nav>
 
     <!-- page header/title and logo -->
-        <header>
-            <div class="logo">
-            </div>
-            <div class="page-name">
-                <h1 class="title">Testimonials</h1>
-            </div>
-        </header>
+    <header>
+        <div class="logo">
+        </div>
+        <div class="page-name">
+            <h1 class="title">Testimonials</h1>
+        </div>
+    </header>
 
-        <!-- page body, contains all testimonials-->
-        <div class="project-container" id="fly">
-            <iframe src="https://www.youtube.com/embed/sUZLStS4j_c" title="The Fly Project - Onbaording video" allowfullscreen></iframe>
-            <div class="testimonial-text"><h2>Fly Functional Fitness</h2>
-                                  <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Fusce elementum volutpat orci a
-                                      vehicula. Maecenas rutrum ligula ut risus fringilla fringilla. Nunc varius velit a nibh
-                                      convallis euismod. Nulla vel augue lacinia, tincidunt nibh in, ultrices purus. Nunc et
-                                      dapibus neque. In hac habitasse platea dictumst. Integer sed lobortis risus. Pellentesque
-                                      ultrices venenatis venenatis. Aliquam facilisis velit ut mauris viverra dignissim. Lorem
-                                      ipsum dolor sit amet, consectetur adipiscing elit. Quisque posuere congue diam, eu vehicula
-                                      mauris tempor eget. Cras ornare semper egestas. Donec consectetur hendrerit nibh.</p></div>
-          </div>
-          <div class="project-container" id="suji">
-            <iframe src="https://www.youtube.com/embed/_wAS9nsShmw" title="SUJI BFR Train With Less Pain Promotion" allowfullscreen></iframe>
-            <div class="testimonial-text"><h2>Suji BFR</h2>
-                                  <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Fusce elementum volutpat orci a
-                                      vehicula. Maecenas rutrum ligula ut risus fringilla fringilla. Nunc varius velit a nibh
-                                      convallis euismod. Nulla vel augue lacinia, tincidunt nibh in, ultrices purus. Nunc et
-                                      dapibus neque. In hac habitasse platea dictumst. Integer sed lobortis risus. Pellentesque
-                                      ultrices venenatis venenatis. Aliquam facilisis velit ut mauris viverra dignissim. Lorem
-                                      ipsum dolor sit amet, consectetur adipiscing elit. Quisque posuere congue diam, eu vehicula
-                                      mauris tempor eget. Cras ornare semper egestas. Donec consectetur hendrerit nibh.</p></div>
-          </div>
-          <div class="project-container" id="ali-crawford">
-            <iframe src="https://www.youtube.com/embed/NO-d7WIJ0RE" title="Interview with Alison Crawford: Crossfit Athlete" allowfullscreen></iframe>
-            <div class="testimonial-text"><h2>Alison Crawford: Crossfit Athlete</h2>
-                                  <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Fusce elementum volutpat orci a
-                                      vehicula. Maecenas rutrum ligula ut risus fringilla fringilla. Nunc varius velit a nibh
-                                      convallis euismod. Nulla vel augue lacinia, tincidunt nibh in, ultrices purus. Nunc et
-                                      dapibus neque. In hac habitasse platea dictumst. Integer sed lobortis risus. Pellentesque
-                                      ultrices venenatis venenatis. Aliquam facilisis velit ut mauris viverra dignissim. Lorem
-                                      ipsum dolor sit amet, consectetur adipiscing elit. Quisque posuere congue diam, eu vehicula
-                                      mauris tempor eget. Cras ornare semper egestas. Donec consectetur hendrerit nibh.</p></div>
-          </div>
-          <div class="project-container" id="adam">
-            <iframe src="https://www.youtube.com/embed/pbS2GWaIXCc" title="Adam Ashe: Professional Rugby Player" allowfullscreen></iframe>
-            <div class="testimonial-text"><h2><em>"Adam Ashe: Professional Rugby Player"</em></h2>
-                                  <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Fusce elementum volutpat orci a
-                                      vehicula. Maecenas rutrum ligula ut risus fringilla fringilla. Nunc varius velit a nibh
-                                      convallis euismod. Nulla vel augue lacinia, tincidunt nibh in, ultrices purus. Nunc et
-                                      dapibus neque. In hac habitasse platea dictumst. Integer sed lobortis risus. Pellentesque
-                                      ultrices venenatis venenatis. Aliquam facilisis velit ut mauris viverra dignissim. Lorem
-                                      ipsum dolor sit amet, consectetur adipiscing elit. Quisque posuere congue diam, eu vehicula
-                                      mauris tempor eget. Cras ornare semper egestas. Donec consectetur hendrerit nibh.</p></div>
-          </div>
-          <div class="project-container" id="ross-park">
-            <iframe src="https://www.youtube.com/embed/T7gvCXtF7wE" title="Ross Park: Personal Trainer" allowfullscreen></iframe>
-            <div class="testimonial-text"><h2>Ross Park: PT/Gym Owner</h2>
-                                  <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Fusce elementum volutpat orci a
-                                      vehicula. Maecenas rutrum ligula ut risus fringilla fringilla. Nunc varius velit a nibh
-                                      convallis euismod. Nulla vel augue lacinia, tincidunt nibh in, ultrices purus. Nunc et
-                                      dapibus neque. In hac habitasse platea dictumst. Integer sed lobortis risus. Pellentesque
-                                      ultrices venenatis venenatis. Aliquam facilisis velit ut mauris viverra dignissim. Lorem
-                                      ipsum dolor sit amet, consectetur adipiscing elit. Quisque posuere congue diam, eu vehicula
-                                      mauris tempor eget. Cras ornare semper egestas. Donec consectetur hendrerit nibh.</p></div>
-          </div>
-          <div class="project-container" id="puresport">
-            <iframe src="https://www.youtube.com/embed/lITWA-UmNck" title="Puresport CBD" allowfullscreen></iframe>
-            <div class="testimonial-text"><h2>Puresport CBD</h2>
-                                  <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Fusce elementum volutpat orci a
-                                      vehicula. Maecenas rutrum ligula ut risus fringilla fringilla. Nunc varius velit a nibh
-                                      convallis euismod. Nulla vel augue lacinia, tincidunt nibh in, ultrices purus. Nunc et
-                                      dapibus neque. In hac habitasse platea dictumst. Integer sed lobortis risus. Pellentesque
-                                      ultrices venenatis venenatis. Aliquam facilisis velit ut mauris viverra dignissim. Lorem
-                                      ipsum dolor sit amet, consectetur adipiscing elit. Quisque posuere congue diam, eu vehicula
-                                      mauris tempor eget. Cras ornare semper egestas. Donec consectetur hendrerit nibh.</p></div>
-          </div>
+    <!-- page body, contains all testimonials-->
+    <div class="project-container" id="fly">
+        <iframe src="https://www.youtube.com/embed/sUZLStS4j_c" title="The Fly Project - Onbaording video"
+            allowfullscreen></iframe>
+        <div class="testimonial-text">
+            <h2>Fly Functional Fitness</h2>
+            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Fusce elementum volutpat orci a
+                vehicula. Maecenas rutrum ligula ut risus fringilla fringilla. Nunc varius velit a nibh
+                convallis euismod. Nulla vel augue lacinia, tincidunt nibh in, ultrices purus. Nunc et
+                dapibus neque. In hac habitasse platea dictumst. Integer sed lobortis risus. Pellentesque
+                ultrices venenatis venenatis. Aliquam facilisis velit ut mauris viverra dignissim. Lorem
+                ipsum dolor sit amet, consectetur adipiscing elit. Quisque posuere congue diam, eu vehicula
+                mauris tempor eget. Cras ornare semper egestas. Donec consectetur hendrerit nibh.</p>
+        </div>
+    </div>
+    <div class="project-container" id="suji">
+        <iframe src="https://www.youtube.com/embed/_wAS9nsShmw" title="SUJI BFR Train With Less Pain Promotion"
+            allowfullscreen></iframe>
+        <div class="testimonial-text">
+            <h2>Suji BFR</h2>
+            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Fusce elementum volutpat orci a
+                vehicula. Maecenas rutrum ligula ut risus fringilla fringilla. Nunc varius velit a nibh
+                convallis euismod. Nulla vel augue lacinia, tincidunt nibh in, ultrices purus. Nunc et
+                dapibus neque. In hac habitasse platea dictumst. Integer sed lobortis risus. Pellentesque
+                ultrices venenatis venenatis. Aliquam facilisis velit ut mauris viverra dignissim. Lorem
+                ipsum dolor sit amet, consectetur adipiscing elit. Quisque posuere congue diam, eu vehicula
+                mauris tempor eget. Cras ornare semper egestas. Donec consectetur hendrerit nibh.</p>
+        </div>
+    </div>
+    <div class="project-container" id="ali-crawford">
+        <iframe src="https://www.youtube.com/embed/NO-d7WIJ0RE" title="Interview with Alison Crawford: Crossfit Athlete"
+            allowfullscreen></iframe>
+        <div class="testimonial-text">
+            <h2>Alison Crawford: Crossfit Athlete</h2>
+            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Fusce elementum volutpat orci a
+                vehicula. Maecenas rutrum ligula ut risus fringilla fringilla. Nunc varius velit a nibh
+                convallis euismod. Nulla vel augue lacinia, tincidunt nibh in, ultrices purus. Nunc et
+                dapibus neque. In hac habitasse platea dictumst. Integer sed lobortis risus. Pellentesque
+                ultrices venenatis venenatis. Aliquam facilisis velit ut mauris viverra dignissim. Lorem
+                ipsum dolor sit amet, consectetur adipiscing elit. Quisque posuere congue diam, eu vehicula
+                mauris tempor eget. Cras ornare semper egestas. Donec consectetur hendrerit nibh.</p>
+        </div>
+    </div>
+    <div class="project-container" id="adam">
+        <iframe src="https://www.youtube.com/embed/pbS2GWaIXCc" title="Adam Ashe: Professional Rugby Player"
+            allowfullscreen></iframe>
+        <div class="testimonial-text">
+            <h2><em>"Adam Ashe: Professional Rugby Player"</em></h2>
+            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Fusce elementum volutpat orci a
+                vehicula. Maecenas rutrum ligula ut risus fringilla fringilla. Nunc varius velit a nibh
+                convallis euismod. Nulla vel augue lacinia, tincidunt nibh in, ultrices purus. Nunc et
+                dapibus neque. In hac habitasse platea dictumst. Integer sed lobortis risus. Pellentesque
+                ultrices venenatis venenatis. Aliquam facilisis velit ut mauris viverra dignissim. Lorem
+                ipsum dolor sit amet, consectetur adipiscing elit. Quisque posuere congue diam, eu vehicula
+                mauris tempor eget. Cras ornare semper egestas. Donec consectetur hendrerit nibh.</p>
+        </div>
+    </div>
+    <div class="project-container" id="ross-park">
+        <iframe src="https://www.youtube.com/embed/T7gvCXtF7wE" title="Ross Park: Personal Trainer"
+            allowfullscreen></iframe>
+        <div class="testimonial-text">
+            <h2>Ross Park: PT/Gym Owner</h2>
+            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Fusce elementum volutpat orci a
+                vehicula. Maecenas rutrum ligula ut risus fringilla fringilla. Nunc varius velit a nibh
+                convallis euismod. Nulla vel augue lacinia, tincidunt nibh in, ultrices purus. Nunc et
+                dapibus neque. In hac habitasse platea dictumst. Integer sed lobortis risus. Pellentesque
+                ultrices venenatis venenatis. Aliquam facilisis velit ut mauris viverra dignissim. Lorem
+                ipsum dolor sit amet, consectetur adipiscing elit. Quisque posuere congue diam, eu vehicula
+                mauris tempor eget. Cras ornare semper egestas. Donec consectetur hendrerit nibh.</p>
+        </div>
+    </div>
+    <div class="project-container" id="puresport">
+        <iframe src="https://www.youtube.com/embed/lITWA-UmNck" title="Puresport CBD" allowfullscreen></iframe>
+        <div class="testimonial-text">
+            <h2>Puresport CBD</h2>
+            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Fusce elementum volutpat orci a
+                vehicula. Maecenas rutrum ligula ut risus fringilla fringilla. Nunc varius velit a nibh
+                convallis euismod. Nulla vel augue lacinia, tincidunt nibh in, ultrices purus. Nunc et
+                dapibus neque. In hac habitasse platea dictumst. Integer sed lobortis risus. Pellentesque
+                ultrices venenatis venenatis. Aliquam facilisis velit ut mauris viverra dignissim. Lorem
+                ipsum dolor sit amet, consectetur adipiscing elit. Quisque posuere congue diam, eu vehicula
+                mauris tempor eget. Cras ornare semper egestas. Donec consectetur hendrerit nibh.</p>
+        </div>
+    </div>
 
-          <!-- footer and social media buttons -->
-          <footer>
-            <div id="social-footer">
-                <div class="ink-partition ip-bottom-cta"></div>
-                <div id="social">
-                    <h2>Follow us</h2>
-                    <ul class="social-buttons">
-                        <li>
-                            <a id="twitter" href="https://twitter.com" target="_blank" rel="noopener"
-                                aria-label="Visit our facebook page (opens in a new tab)"><i
-                                    class="fa-brands fa-twitter-square"></i></a>
-                        </li>
-                        <li>
-                            <a id="youtube" href="https://youtube.com" target="_blank" rel="noopener"
-                                aria-label="watch our youtube playlist (opens in a new tab)"><i
-                                    class="fa-brands fa-youtube"></i></a>
-                        </li>
-                        <li>
-                            <a id="instagram" href="https://www.instagram.com/ronin347media/" target="_blank" rel="noopener"
-                                aria-label="Visit our Instagram (opens in a new tab)"><i
-                                    class="fa-brands fa-instagram"></i></a>
-                        </li>
-                    </ul>
+    <!-- footer and social media buttons -->
+    <footer>
+        <div id="social-footer">
+            <div class="ink-partition ip-bottom-cta"></div>
+            <div id="social">
+                <h2>Follow us</h2>
+                <ul class="social-buttons">
+                    <li>
+                        <a id="twitter" href="https://twitter.com" target="_blank" rel="noopener"
+                            aria-label="Visit our facebook page (opens in a new tab)"><i
+                                class="fa-brands fa-twitter-square"></i></a>
+                    </li>
+                    <li>
+                        <a id="youtube" href="https://youtube.com" target="_blank" rel="noopener"
+                            aria-label="watch our youtube playlist (opens in a new tab)"><i
+                                class="fa-brands fa-youtube"></i></a>
+                    </li>
+                    <li>
+                        <a id="instagram" href="https://www.instagram.com/ronin347media/" target="_blank" rel="noopener"
+                            aria-label="Visit our Instagram (opens in a new tab)"><i
+                                class="fa-brands fa-instagram"></i></a>
+                    </li>
+                </ul>
+            </div>
+            <!-- link to my github and copyright information -->
+            <div class="footer-creds">
+                <div class="creds-1" id="cal-rex-git">
+                    <p>Site Developed for Ronin347 by <a href="https://github.com/Cal-Rex"
+                            aria-label="link to Cal-Rex's Github" target="_blank" rel="noopener">Cal-Rex</a></p>
                 </div>
-                <!-- link to my github and copyright information -->
-                <div class="footer-creds">
-                    <div class="creds-1" id="cal-rex-git">
-                        <p>Site Developed for Ronin347 by <a href="https://github.com/Cal-Rex" aria-label="link to Cal-Rex's Github" target="_blank" rel="noopener">Cal-Rex</a></p>
-                    </div>
-                    <div class="creds-2" id="copyright">
-                        <p>Copyright Ronin347 Media 2022 ©</p>
-                    </div>
+                <div class="creds-2" id="copyright">
+                    <p>Copyright Ronin347 Media 2022 ©</p>
                 </div>
             </div>
-        </footer>
+        </div>
+    </footer>
 </body>
 
 <!-- script for social media icons -->
