--- a/about.html
+++ b/about.html
@@ -35,7 +35,7 @@
                     <a href="#social-footer" alt="Social media contacts">
                         <li>Social</li>
                     </a>
-                    <a href="mailto:ronin347media@gmail.com" alt="contact us by email">
+                    <a href="contact.html" alt="contact us">
                         <li>Contact</li>
                     </a>
                 </ul>
