--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
                 <video autoplay muted loop>
                     <source src="assets/videos/ronin-hero-vid.mov" type="video/mp4">
                 </video>
-                <div class="hero-link"><a href="index2.html">Watch our Portfolio</a></div>
+                <div class="hero-link"><a href="404.html">Watch our Portfolio</a></div>
                 <div class="ink-partition ip-bottom-hero"></div>
             </div>
             <div class="ink-partition ip-top-cta"></div>
