page titles revised, 500 page added

--- a/faq.html
+++ b/faq.html
@@ -7,7 +7,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link href="assets/css/style-faq.css" rel="stylesheet" type="text/css" />
     <link rel="icon" type="image/x-icon" href="assets/images/site-wide/favicon.ico">
-    <title>Ronin 347 Projects</title>
+    <title>Ronin 347 T's & C's</title>
 </head>
 
 <body>
