--- a/404.html
+++ b/404.html
@@ -5,9 +5,9 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link href="assets/css/style-404.css" rel="stylesheet" type="text/css" />
+    <link href="assets/css/style-404-500.css" rel="stylesheet" type="text/css" />
     <link rel="icon" type="image/x-icon" href="assets/images/site-wide/favicon.ico">
-    <title>Document</title>
+    <title>Oops! 404: page not found</title>
 </head>
 <!-- click the played card to go back ot the index page-->
 
@@ -22,7 +22,7 @@
         </div>
         <!-- return to index link -->
         <div class="pot-img"><a href="index.html" aria-label="return to the homepage"><img
-                    src="assets/images/404/pot-of-greed.png" alt="pot of greed! click to return to the hoempage"></a>
+                    src="assets/images/404-500/pot-of-greed.png" alt="pot of greed! click to return to the hoempage"></a>
         </div>
         <div class="text-2">
             <h2>Good thing you drew this pot of greed</h2>
