add body text to FAQ section, add extra contact button to faq

--- a/contact.html
+++ b/contact.html
@@ -23,13 +23,13 @@
                     <a href="index.html" alt="home">
                         <li>Home</li>
                     </a>
-                    <a href="404.html" alt="About us">
+                    <a href="about.html" alt="About us">
                         <li>About Us</li>
                     </a>
                     <a href="testimonials.html" alt="Testimonials from our clients and partners">
                         <li>Testimonials</li>
                     </a>
-                    <a href="404.html" alt="FAQ">
+                    <a href="faq.html" alt="FAQ">
                         <li>FAQ</li>
                     </a>
                     <a href="#social-footer" alt="Social media contacts">
