--- a/faq.html
+++ b/faq.html
@@ -55,35 +55,50 @@
     <!-- main body text -->
     <section class="faq-container">
         <div class="faq">
-            <h2>Lorem Ipsum?</h2>
-            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Fusce elementum volutpat orci a vehicula.
-                Maecenas rutrum ligula ut risus fringilla fringilla. Nunc varius velit a nibh convallis euismod. Nulla
-                vel augue lacinia, tincidunt nibh in, ultrices purus. Nunc et dapibus neque. In hac habitasse platea
-                dictumst. Integer sed lobortis risus.</p>
+            <h2>Project Turn Around</h2>
+            <p>We will always strive to delivery the project as quickly as possible. However as each
+                individual project is unique and requires its own process in post production this can take
+                from 14 to 30 days from the day of shooting.
+            </p>
         </div>
         <div class="faq">
-            <h2>Lorem Ipsum?</h2>
-            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Fusce elementum volutpat orci a vehicula.
-                Maecenas rutrum ligula ut risus fringilla fringilla. Nunc varius velit a nibh convallis euismod. Nulla
-                vel augue lacinia, tincidunt nibh in, ultrices purus. Nunc et dapibus neque. In hac habitasse platea
-                dictumst. Integer sed lobortis risus. Pellentesque ultrices venenatis venenatis. Aliquam facilisis velit
-                ut mauris viverra dignissim. Lorem ipsum dolor sit amet, consectetur adipiscing elit. Quisque posuere
-                congue diam, eu vehicula mauris tempor eget. Cras ornare semper egestas. Donec consectetur hendrerit
-                nibh.</p>
+            <h2>Project Proofing</h2>
+            <p>Upon project completion in the edit you will receive a first draft of the agrees project.
+                Depending on the delivery timeline this can be to clarify creative or artistic decisions
+                incumbent to the final video. Any media inclusive of the first draft is not permitted for
+                public consumption.
+            </p>
         </div>
         <div class="faq">
-            <h2>Lorem Ipsum?</h2>
-            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Fusce elementum volutpat orci a vehicula.
-                Maecenas rutrum ligula ut risus fringilla fringilla. Nunc varius velit a nibh convallis euismod. Nulla
-                vel augue lacinia, tincidunt nibh in, ultrices purus. Nunc et dapibus neque. In hac habitasse platea
-                dictumst. Integer sed lobortis risus.</p>
+            <h2>Edits and Revisions</h2>
+            <p>Upon receipt of the finished and approved project it is recommended that you take up to
+                48hrs to watch and review the video. We advise you to this at different times in the day and
+                at different locations to make sure you are definitely happy with the end result.
+                At the end of the 48hr period you are able to send us a full page of edits, notes and
+                changes that you wish to see implemented. The desired changes will be turned around
+                within 7 days and the revised project will be transferred to you.
+                Any further changes after the initial review session will incur a further charge at 15% of the
+                agreed rate of the project (I.E / Agreed rate-£300 x0.15 = £45).</p>
         </div>
         <div class="faq">
-            <h2>Lorem Ipsum?</h2>
-            <p>Nullam feugiat, magna in dictum dignissim, tortor sem laoreet mi, nec lacinia ligula mauris eget ex.
-                Interdum et malesuada fames ac ante ipsum primis in faucibus.</p>
+            <h2>Project Storage</h2>
+            <p>Upon Completion of the finished project (Including Revisions) the captured footage and
+                material will be saved on hard storage for a maximum of 60 days after which it will be
+                permanently removed. You will receive a reminder near the time of deletion and can decide
+                if you wish to keep the footage in storage for use in further projects or not.
+                This need not apply to clients on service retainers.</p>
         </div>
+        <div class="faq">
+            <h2>Project Sharing and Distribution</h2>
+            <p>We hope that you are thoroughly satisfied with you finished project and that you are proud
+                to share it across and all social media platforms. We would kindly ask that you credit the
+                team using the handle @Ronin347Media.</p>
+        </div>
+        <div class="push-contact"><h3>Question not answered?</h3>
+        <p><a href="contact.html" alt="contact us">Ask us a question</a></p></div>
     </section>
+
+
 
     <!-- footer and social media buttons -->
     <footer>
@@ -146,4 +161,5 @@
         });
     }
 </script>
+
 </html>
