--- a/testimonials.html
+++ b/testimonials.html
@@ -72,13 +72,9 @@
             allowfullscreen></iframe>
         <div class="testimonial-text">
             <h2>Suji BFR</h2>
-            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Fusce elementum volutpat orci a
-                vehicula. Maecenas rutrum ligula ut risus fringilla fringilla. Nunc varius velit a nibh
-                convallis euismod. Nulla vel augue lacinia, tincidunt nibh in, ultrices purus. Nunc et
-                dapibus neque. In hac habitasse platea dictumst. Integer sed lobortis risus. Pellentesque
-                ultrices venenatis venenatis. Aliquam facilisis velit ut mauris viverra dignissim. Lorem
-                ipsum dolor sit amet, consectetur adipiscing elit. Quisque posuere congue diam, eu vehicula
-                mauris tempor eget. Cras ornare semper egestas. Donec consectetur hendrerit nibh.</p>
+            <p><em>“Working with Dan was brilliant. The output is great, he is super quick and completes a very
+                    professional job. Would absolutely recommend to anyone”</em>
+            <p class="quote-author">- Alex Birks, SUJI Ceo</p>
         </div>
     </div>
     <div class="project-container" id="ali-crawford">
@@ -197,4 +193,5 @@
         });
     }
 </script>
+
 </html>
